More updating of templates.

--- a/spud/templates/spud/photo_detail.html
+++ b/spud/templates/spud/photo_detail.html
@@ -34,9 +34,11 @@
 <a href="{% get_thumb_url object "large" %}">
 <img src="{% get_thumb_url object size %}" alt="{{ object.title }}" />
 </a>
+{% if object.description %}
+{{object.description|urlizetrunc:40|linebreaks}}
+{% endif %}
 </div>
 
-{% if size != "large" %}
 <div class='photo_detail_photo_detail'>
 <h2>Photo Details</h2>
 
@@ -45,9 +47,6 @@
 <dt>Title</dt><dd>{{object.title}}</dd>
 {% endif %}
 <dt>Original</dt><dd>{{object.name}} ({{object.width}}x{{object.height}})</dd>
-{% if object.description %}
-<dt>Description</dt><dd>{{object.description|urlizetrunc:40|linebreaks}}</dd>
-{% endif %}
 {% if object.photo_person_set.all %}
 <dt>People</dt><dd>
   {% for pp in object.photo_person_set.all %}
@@ -125,7 +124,6 @@
 <dt>Metering Mode</dt><dd>{{object.metering_mode}}</dd>
 </dl>
 </div>
-{% endif %}
 
 <br class="clear"/>
 </div>
