--- a/photos/templates/registration/logged_out.html
+++ b/photos/templates/registration/logged_out.html
@@ -1,7 +1,7 @@
 {% extends "base_site.html" %}
 {% load i18n %}
 
-{% block breadcrumbs %}<div class="breadcrumbs"><a href="{% url spud_root %}">{% trans 'Home' %}</a></div>{% endblock %}
+{% block breadcrumbs %}<div class="breadcrumbs"><a href="{% url root %}">{% trans 'Home' %}</a></div>{% endblock %}
 
 {% block content %}
 
