--- a/media/css/global.css
+++ b/media/css/global.css
@@ -8,15 +8,23 @@ body { margin:0; padding:0; font-size:12px; font-family:"Lucida Grande","DejaVu 
 .photo_list_item { border:1px solid #dddddd; }
 
 .photo_detail { border:1px solid #dddddd; }
+.photo_detail h2 { argin:0 0 .5em 0; }
 .photo_detail_photo { float:left; padding:10px; }
 .photo_detail_photo_detail  { float:left; padding:10px; max-width:200px; }
 .photo_detail_photo_detail ul  { padding-left: 20px; }
 .photo_detail_camera_detail { float:left; padding:10px; max-width:200px; }
 
 .photo_edit { border:1px solid #dddddd; }
+.photo_edit h2 { font-size:12px; margin:0 0 .5em 0; }
 .photo_edit_photo { padding:10px; }
 .photo_edit_photo_detail  { padding:10px;}
 .photo_edit_people_detail { padding:10px;}
+
+.photo_edit_form { float:left; padding:10px; }
+.photo_edit_persons  { float:left; padding:10px; max-width:200px; }
+.photo_edit_albums  { float:left; padding:10px; max-width:200px; }
+.photo_edit_categorys  { float:left; padding:10px; max-width:200px; }
+.photo_edit_places  { float:left; padding:10px; max-width:200px; }
 
 /* LINKS */
 a:link, a:visited { color: #5b80b2; text-decoration:none; }
