--- a/media/css/global.css
+++ b/media/css/global.css
@@ -8,7 +8,7 @@ body { margin:0; padding:0; font-size:12px; font-family:"Lucida Grande","DejaVu 
 .photo_list_item { border:1px solid #dddddd; }
 
 .photo_detail { border:1px solid #dddddd; }
-.photo_detail h2 { argin:0 0 .5em 0; }
+.photo_detail h2 { margin:0 0 .5em 0; }
 .photo_detail_photo { float:left; padding:10px; }
 .photo_detail_photo_detail  { float:left; padding:10px; max-width:200px; }
 .photo_detail_photo_detail ul  { padding-left: 20px; }
