--- a/spud/templates/spud/show_update_form.html
+++ b/spud/templates/spud/show_update_form.html
@@ -9,28 +9,28 @@
 <div class="photo_edit_persons">
 <h2>People</h2>
 {% for person in persons %}
-<a href="#" onclick="add_object('person','{{ person }}'); return false;">{{ person }}</a> {{ person.photos__count }}</br>
+<a href="#" onclick="add_command('add person {{ person|escapejs }}'); return false;">{{ person }}</a> {{ person.photos__count }}</br>
 {% endfor %}
 </div>
 
 <div class="photo_edit_albums">
 <h2>Albums</h2>
 {% for album in albums %}
-<a href="#" onclick="add_object('album','{{ album }}'); return false;">{{ album }}</a> {{ album.photos__count }}</br>
+<a href="#" onclick="add_command('add album {{ album|escapejs }}'); return false;">{{ album }}</a> {{ album.photos__count }}</br>
 {% endfor %}
 </div>
 
 <div class="photo_edit_categorys">
 <h2>Categories</h2>
 {% for category in categorys %}
-<a href="#" onclick="add_object('category','{{ category }}'); return false;">{{ category }}</a> {{ category.photos__count }}</br>
+<a href="#" onclick="add_command('add category {{ category|escapejs }}'); return false;">{{ category }}</a> {{ category.photos__count }}</br>
 {% endfor %}
 </div>
 
 <div class="photo_edit_places">
 <h2>Places</h2>
 {% for place in places %}
-<a href="#" onclick="add_object('place','{{ place }}'); return false;">{{ place }}</a> {{ place.photos__count }}</br>
+<a href="#" onclick="add_command('set place {{ place|escapejs }}'); return false;">{{ place }}</a> {{ place.photos__count }}</br>
 {% endfor %}
 </div>
 
@@ -51,10 +51,10 @@ function replace_selection(ta,replace_str)
     ta.selectionEnd = start_pos + replace_str.length
     return {start: start_pos, end: end_pos, length: replace_str.length, text: replace_str};
 }
-function add_object(type,value)
+function add_command(command)
 {
     ta = document.getElementById('id_updates');
-    replace_selection(ta, "add "+type+" "+value+"\n")
+    replace_selection(ta, commandn")
     ta.focus();
 }
 </script>
