Fix broken Javascript and HTML.

--- a/spud/templates/spud/show_update_form.html
+++ b/spud/templates/spud/show_update_form.html
@@ -9,28 +9,28 @@
 <div class="photo_edit_persons">
 <h2>People</h2>
 {% for person in persons %}
-<a href="#" onclick="add_command('add person {{ person|escapejs }}'); return false;">{{ person }}</a> {{ person.photos__count }}</br>
+<a href="#" onclick="add_command('add person {{ person|escapejs }}'); return false;">{{ person }}</a> {{ person.photos__count }}<br/>
 {% endfor %}
 </div>
 
 <div class="photo_edit_albums">
 <h2>Albums</h2>
 {% for album in albums %}
-<a href="#" onclick="add_command('add album {{ album|escapejs }}'); return false;">{{ album }}</a> {{ album.photos__count }}</br>
+<a href="#" onclick="add_command('add album {{ album|escapejs }}'); return false;">{{ album }}</a> {{ album.photos__count }}<br/>
 {% endfor %}
 </div>
 
 <div class="photo_edit_categorys">
 <h2>Categories</h2>
 {% for category in categorys %}
-<a href="#" onclick="add_command('add category {{ category|escapejs }}'); return false;">{{ category }}</a> {{ category.photos__count }}</br>
+<a href="#" onclick="add_command('add category {{ category|escapejs }}'); return false;">{{ category }}</a> {{ category.photos__count }}<br/>
 {% endfor %}
 </div>
 
 <div class="photo_edit_places">
 <h2>Places</h2>
 {% for place in places %}
-<a href="#" onclick="add_command('set place {{ place|escapejs }}'); return false;">{{ place }}</a> {{ place.photos__count }}</br>
+<a href="#" onclick="add_command('set place {{ place|escapejs }}'); return false;">{{ place }}</a> {{ place.photos__count }}<br/>
 {% endfor %}
 </div>
 
@@ -54,7 +54,7 @@ function replace_selection(ta,replace_str)
 function add_command(command)
 {
     ta = document.getElementById('id_updates');
-    replace_selection(ta, commandn")
+    replace_selection(ta, command+"\n")
     ta.focus();
 }
 </script>
