Allow customizing defaults on a per session basis.

--- a/spud/templates/spud/action_detail.html
+++ b/spud/templates/spud/action_detail.html
@@ -14,7 +14,7 @@
 {% show_view_buttons web user object %}
 
 
-{% show_photo_list page_obj web object %}
+{% show_photo_list page_obj web object default_list_size default_view_size %}
 
 {% pagination page_obj web %}
 
