--- a/spud/templates/spud/search_detail.html
+++ b/spud/templates/spud/search_detail.html
@@ -20,7 +20,7 @@
 {% endfor %}
 </dl>
 
-{% show_photo_list page_obj web object %}
+{% show_photo_list page_obj web object default_list_size default_view_size %}
 
 {% pagination page_obj web %}
 
