--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -41,6 +41,8 @@
                     <a href="{{ root_path }}password_change/">
                 {% endif %}
                 {% trans 'Change password' %}</a> /
+                {% url settings_form as settings_url %}
+                <a href="{{ settings_url }}?next={{ request.path }}">Settings</a> /
                 {% url logout as logout_url %}
                 {% if logout_url %}
                     <a href="{{ logout_url }}">
@@ -49,7 +51,10 @@
                 {% endif %}
                 {% trans 'Log out' %}</a>
                 {% else %}
-                <div id="user-tools"><a href="{% url login %}?next={{ request.path }}">{% trans 'Log in' %}</a></div>
+                <div id="user-tools">
+                <a href="{{ settings_url }}?next={{ request.path }}">Settings</a> /
+                <a href="{% url login %}?next={{ request.path }}">{% trans 'Log in' %}</a>
+                </div>
                 {% endif %}
             {% endblock %}
         </div>
