--- a/spud/templates/spud/date_detail.html
+++ b/spud/templates/spud/date_detail.html
@@ -13,7 +13,7 @@
 
 {% show_view_buttons web user object %}
 
-{% show_photo_list page_obj web object %}
+{% show_photo_list page_obj web object default_list_size default_view_size %}
 
 {% pagination page_obj web %}
 
