--- a/spud/templates/spud/person_detail.html
+++ b/spud/templates/spud/person_detail.html
@@ -123,7 +123,7 @@
 {% endif %}
 {% endifequal %}
 
-{% show_photo_list page_obj web object %}
+{% show_photo_list page_obj web object default_list_size default_view_size %}
 
 {% pagination page_obj web %}
 
