--- a/spud/templates/spud/place_detail.html
+++ b/spud/templates/spud/place_detail.html
@@ -62,7 +62,7 @@
     {% for place in object.children.all %}
         <li class='photo_list_item' onClick='parent.location="{% get_view_url place %}"'>
             <a href="{% get_view_url place %}">
-                {% with place.get_cover_photo as photo %}{% if photo %}<img src='{% get_list_thumb_url photo %}' alt=''/><br/>{% endif %}{% endwith %}
+                {% with place.get_cover_photo as photo %}{% if photo %}<img src='{% get_thumb_url photo default_list_size %}' alt=''/><br/>{% endif %}{% endwith %}
                 <div class='title'>{{ place }}</div>
             </a>
         </li>
@@ -73,7 +73,7 @@
 {% endif %}
 {% endifequal %}
 
-{% show_photo_list page_obj web object %}
+{% show_photo_list page_obj web object default_list_size default_view_size %}
 
 {% pagination page_obj web %}
 
