Fix broken links.

--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -41,8 +41,7 @@
                     <a href="{{ root_path }}password_change/">
                 {% endif %}
                 {% trans 'Change password' %}</a> /
-                {% url settings_form as settings_url %}
-                <a href="{{ settings_url }}?next={{ request.path }}">Settings</a> /
+                <a href="{% url settings_form %}?next={{ request.path }}">Settings</a> /
                 {% url logout as logout_url %}
                 {% if logout_url %}
                     <a href="{{ logout_url }}">
@@ -52,7 +51,7 @@
                 {% trans 'Log out' %}</a>
                 {% else %}
                 <div id="user-tools">
-                <a href="{{ settings_url }}?next={{ request.path }}">Settings</a> /
+                <a href="{% url settings_form %}?next={{ request.path }}">Settings</a> /
                 <a href="{% url login %}?next={{ request.path }}">{% trans 'Log in' %}</a>
                 </div>
                 {% endif %}
