--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -9,6 +9,7 @@
 <script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% admin_media_prefix %}{% endfilter %}";</script>
 {% block extrahead %}{% endblock %}
 {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE" />{% endblock %}
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 {% load i18n %}
 
