--- a/spud/templates/spud/photo_edit_buttons.html
+++ b/spud/templates/spud/photo_edit_buttons.html
@@ -1,4 +1,6 @@
 <div class="submit-row">
+show <a href="#" onclick="show_fields(); return false;">fields</a> or
+<a href="#" onclick="show_command(); return false;">command</a>
 {% if page_obj %}
 <input type="submit" name="goto" value="prev" accesskey="p" />
 {% endif %}
