--- a/spud/templates/spud/show_object_list.html
+++ b/spud/templates/spud/show_object_list.html
@@ -5,7 +5,7 @@
     {% for column in table.columns %}
     <th>
     {% if column.sortable %}
-        <a href="{% url_with_param sort=column.name_toggled %}">{{ column }}</a>
+        <a href="{% url_with_param sort=column.name_toggled %}">{{ column }}
         {% if column.is_ordered_straight %}<img src="{{ MEDIA_URL }}img/admin/arrow-down.gif" />{% endif %}
         {% if column.is_ordered_reverse %}<img src="{{ MEDIA_URL }}img/admin/arrow-up.gif" />{% endif %}
         </a>
